# 43V3RMUS1C

./: .gitignore  .pre-commit-config.yaml  API_REFACTOR_REPORT.md  API_TEST_REPORT.md  MODEL_MIGRATION_PLAN.md  Makefile  README.md  api_test_results.json  docker-compose-fix.yml  docker-compose.yml  docker-compose.yml.bak  duplicate_tables_migration.json  monitor.sh  package.json  system_status_final.md  system_status_report.md  tests-prompt.txt  turbo.json
backend/: .env.example  MIGRATION_COMPLETE_SUMMARY.md  alembic.ini  health-monitor.service  health_monitor.py  requirements.txt  requirements_tail.txt  setup_health_monitor.bat
backend/tests/: __init__.py  conftest.py  pyproject.toml  pytest.ini
backend/tests/chaos/fault_injection/: test_chaos.py
backend/tests/fixtures/: test_data_infrastructure.py
backend/tests/integration/: test_service_integration.py
backend/tests/performance/: test_performance.py
backend/tests/simulation/distributed/: test_distributed_simulation.py
backend/tests/unit/api/: test_websocket.py
backend/tests/unit/domains/constitutional_governance/: test_constitutional_governance.py
backend/tests/unit/domains/distributed_runtime/: test_distributed_runtime.py
backend/tests/unit/domains/governance/: test_recursive_stability.py
backend/tests/unit/domains/observability/: test_observability.py
backend/tests/unit/domains/runtime/: test_runtime.py
backend/tests/unit/domains/semantic/: test_semantic.py  test_semantic_consistency.py
frontend/: .env.example  next.config.js  package.json  postcss.config.js  tailwind.config.js  (+1 more)
(+460 files in other folders)
